# ogs6

./: CMakeLists.txt  OGS-6.pc.in  dune.module
Applications/ApplicationsLib/: CMakeLists.txt  LinearSolverLibrarySetup.h  ProjectData.cpp  ProjectData.h  UncoupledProcessesTimeLoop.cpp  UncoupledProcessesTimeLoop.h
Applications/CLI/: CMakeLists.txt  Tests.cmake  Tests_CL.cmake  ogs.cpp  ogs_embedded_python.cpp  ogs_python_bindings.cpp  ogs_python_bindings.h
DUNE_Test/: CMakeLists.txt  dune-hello.cc  dune-poisson-eq.cc  dune-tri6-io.cc  l-shape.msh  poissonequation_result_ref.vtu  square-1x1-tri6-test1.geo  square-1x1-tri6.msh
MathLib/: CMakeLists.txt
MathLib/LinAlg/: ApplyKnownSolution.h  BLAS.cpp  BLAS.h  GlobalMatrixProviders.cpp  GlobalMatrixProviders.h  MatrixProviderUser.h  MatrixSpecifications.h  MatrixTraits.h  MatrixVectorTraits.cpp  MatrixVectorTraits.h  Scaling.cpp  Scaling.h  SimpleMatrixProvider-impl.h  SimpleMatrixProvider.h  SimpleMatrixVectorProvider-impl.h  SimpleMatrixVectorProvider.h  UnifiedMatrixSetters.cpp  UnifiedMatrixSetters.h
MathLib/Nonlinear/: NewtonRaphson-impl.h  NewtonRaphson.cpp  NewtonRaphson.h  Picard-impl.h  Picard.cpp  Picard.h  Root1D.h
MathLib/ODE/: CVodeSolver.cpp  CVodeSolver.h  FunctionHandles.h  OdeSolver.h  OdeSolverFactory.h  declarations.h
ProcessLib/: AbstractJacobianAssembler.cpp  AbstractJacobianAssembler.h  AnalyticalJacobianAssembler.cpp  AnalyticalJacobianAssembler.h  BoundaryCondition.h  BoundaryConditionCollection.cpp  BoundaryConditionCollection.h  CMakeLists.txt  CentralDifferencesJacobianAssembler.cpp  CentralDifferencesJacobianAssembler.h  CreateJacobianAssembler.cpp  CreateJacobianAssembler.h  DirichletBc.h  GroundwaterFlowProcess.h  InitialCondition.cpp  InitialCondition.h  LocalAssemblerInterface.cpp  LocalAssemblerInterface.h  NeumannBc.cpp  NeumannBc.h  NeumannBcConfig.h  OdeSolver.cpp  OdeSolver.h  Output.cpp  Output.h  Parameter.cpp  Parameter.h  Process.cpp  Process.h  ProcessOutput.h  ProcessVariable.cpp  ProcessVariable.h  SecondaryVariable.h  SmallDeformationFEM.h  SmallDeformationProcess-fwd.h  SmallDeformationProcess.cpp  SmallDeformationProcess.h  TESFEM-data-fwd.h  TESFEM-data-impl.h  TESFEM-data-notpl.h  (+21 more)
ProcessLib/Balance/: GenericNaturalBoundaryCondition-impl.h  GenericNaturalBoundaryCondition.h  GenericNaturalBoundaryConditionLocalAssembler.h  NeumannBoundaryCondition.h  NeumannBoundaryConditionLocalAssembler.h
ProcessLib/BoundaryCondition/: BoundaryCondition.cpp  BoundaryCondition.h  BoundaryConditionCollection.cpp  BoundaryConditionCollection.h  BoundaryConditionConfig.h  CMakeLists.txt  ConstraintDirichletBoundaryCondition.cpp  ConstraintDirichletBoundaryCondition.h  CreateBoundaryCondition.cpp  CreateBoundaryCondition.h  DirichletBoundaryCondition.cpp  DirichletBoundaryCondition.h  GenericNaturalBoundaryCondition.h  GenericNonuniformNaturalBoundaryCondition.h  NonuniformDirichletBoundaryCondition.h  NonuniformDirichletBoundaryConditionDUNE.cpp  NonuniformDirichletBoundaryConditionDUNE.h  NonuniformNeumannBoundaryCondition.cpp  PythonBoundaryCondition.cpp  PythonBoundaryCondition.h  PythonBoundaryConditionDetail.h  PythonBoundaryConditionLocalAssembler.h  PythonBoundaryConditionModule.cpp  PythonBoundaryConditionModule.h
ProcessLib/GroundwaterFlow/: CreateGroundwaterFlowProcess.cpp  CreateGroundwaterFlowProcess.h  GroundwaterFlowFEM.h  GroundwaterFlowProcess.cpp  GroundwaterFlowProcess.h  Tests.cmake
ProcessLib/HeatConduction/: HeatConductionFEM.h
ProcessLib/HydroMechanics/: HydroMechanicsProcess-impl.h
ProcessLib/IncompressibleStokesBrinkman/: CreateIncompressibleStokesBrinkmanProcess.cpp  CreateIncompressibleStokesBrinkmanProcess.h  CreateLocalAssemblers.h  IncompressibleStokesBrinkmanFEM-impl.h  IncompressibleStokesBrinkmanFEM.h  IncompressibleStokesBrinkmanProcess-impl.h  IncompressibleStokesBrinkmanProcess.cpp  IncompressibleStokesBrinkmanProcess.h  IncompressibleStokesBrinkmanProcessData.h  LocalAssemblerInterface.h  LocalDataInitializer.h  Tests.cmake
ProcessLib/IncompressibleStokesBrinkmanModified/: CreateIncompressibleStokesBrinkmanModifiedProcess.cpp  CreateIncompressibleStokesBrinkmanModifiedProcess.h  CreateLocalAssemblers.h  IncompressibleStokesBrinkmanModifiedFEM-impl.h  IncompressibleStokesBrinkmanModifiedFEM.h  IncompressibleStokesBrinkmanModifiedProcess-impl.h  IncompressibleStokesBrinkmanModifiedProcess.cpp  IncompressibleStokesBrinkmanModifiedProcess.h  IncompressibleStokesBrinkmanModifiedProcessData.h  LocalAssemblerInterface.h  LocalDataInitializer.h  Tests.cmake
ProcessLib/LiquidFlow/: LiquidFlowProcess.cpp
ProcessLib/Output/: CachedSecondaryVariable.cpp  CachedSecondaryVariable.h  ExtrapolatorData.h  GlobalVectorFromNamedFunction.cpp  GlobalVectorFromNamedFunction.h  Output.cpp  Output.h  ProcessOutput.h  ProcessOutputDUNE.cpp  ProcessOutputDUNE.h  SecondaryVariable.h
ProcessLib/Parameter/: ConstantParameter.h  Parameter.cpp  Parameter.h  SpatialPosition.h
ProcessLib/RichardsFlow/: RichardsFlowProcess.cpp  RichardsFlowProcess.h
ProcessLib/SmallDeformation/: Tests.cmake
ProcessLib/SmallDeformationDUNE/: CMakeLists.txt  CreateLocalAssemblers.h  CreateSmallDeformationProcess.cpp  CreateSmallDeformationProcess.h  LocalAssemblerInterface.h  LocalDataInitializer.h  SmallDeformationFEM.h  SmallDeformationProcess-impl.h  SmallDeformationProcess.cpp  SmallDeformationProcess.h  SmallDeformationProcessData.h  Tests.cmake
ProcessLib/SourceTerms/: CreateSourceTerm.cpp  CreateSourceTerm.h  SourceTermCollection.cpp  SourceTermCollection.h  SourceTermConfig.h
ProcessLib/TCHSNoStokes/: CreateLocalAssemblers.h  CreateTCHSNoStokesProcess.cpp  CreateTCHSNoStokesProcess.h  LocalAssemblerInterface.h  LocalDataInitializer.h  TCHSNoStokesFEM-impl.h  TCHSNoStokesFEM.h  TCHSNoStokesProcess-impl.h  TCHSNoStokesProcess.cpp  TCHSNoStokesProcess.h  TCHSNoStokesProcessData.h  Tests.cmake
ProcessLib/TCHSStokes/: CreateLocalAssemblers.h  CreateTCHSStokesProcess.cpp  CreateTCHSStokesProcess.h  TCHSStokesFEM-impl.h  (+8 more)
python_bindings/: CMakeLists.txt  aux.cpp  pybind11  test.py
(+583 files in other folders)
